fix(security): JDK 17 语法 → JDK 8 等价
springboot3 合并到 master 后测试代码使用 JDK 17 专属语法/API，JDK 8 编译失败。逐一降级为 JDK 8 等价写法：

1. List.of(...) / Set.of(...)（JDK 9+）→ Arrays.asList(...) / new HashSet<>(Arrays.asList(...))；空集合 → Collections.emptyList() / emptySet()
   - 影响：AuthorizationEvaluatorTest / JdbcSessionRepositoryTest / RedisSessionRepositoryTest / SingleSessionRepositoryTest / TinySecurityFacadeTest

2. Java 15 text block（"""..."""）→ 字符串拼接
   - 影响：JdbcSessionRepositoryTest 的 H2 建表 SQL

3. java.util.HexFormat.of().parseHex（JDK 17+）→ 私有 parseHex(String) 辅助方法（Character.digit 逐字节解析）
   - 影响：SimpleHashTest / SM3HashTest

注：TinySecurityFacadeTest 同时含 import jakarta→javax（与 of() 替换同文件、无法按行拆分入库），一并归入本 commit。